# casannis_walking

./: .gitignore  CMakeLists.txt  README.md  casadi_tests.py  package.xml  rviz_frame.rviz  setup.py  tests.py  walking.py
action/: Demo.action
bash/: debug_stepup.bash  gap0.2.bash  lateral.bash  loconly_lateral.bash  loconly_longitudinal.bash  loconly_slow_stepup.bash  loconly_stepup_steps.bash  loconly_stepup_steps1234.bash  longitudinal.bash  rosbag_forces.sh  sc1_rh.bash  sc2_rh.bash  sc3_rh.bash  simul_stepup.bash  slope-10.bash  slope-5.bash  slow_stepup.bash  stepup15cm.bash  stepup_steps.bash  stepup_steps1234.bash  trial_step_up.bash
config/: centauro_payload_stack.yaml  centauro_stack.yaml  centauro_stack_driving.yaml  centauro_stack_driving_trial.yaml  debug_stepup.yaml  similar_DoF.yaml  trial.yaml  wbc_acceleration.yaml  wbc_force_distribution.yaml
launch/: cartesio.launch  cartesio_acceleration.launch  cartesio_driving.launch  cartesio_force_distribution.launch  cartesio_similar_DoF.launch  cartesio_with_arm_ee.launch  centauro_cont_detect_world.launch  centauro_force_estimation.launch  centauro_payload_world.launch  centauro_platform_world.launch  gait.launch  gait_payload.launch  get_link_gz_pose.launch  payloadaware_receding_test.launch  receding_hz_planner.launch  roll_feet.launch  simple_gait_online_planner.launch  swing_foot.launch  swing_foot1.launch  swing_foot_payload.launch  trot.launch
msg/: Four_contacts.msg  Obstacles.msg  Pa_interpolated_trj.msg  PayloadAware_plans.msg
paper_plots/: com.py  compr_motion_plans.py  experiment_forces.py  stepup1.txt  stepup2.txt  stepup3.txt  stepup4.txt  stepup5.txt
pj/: ankles_position.xml  com_feet_pos_reference.xml  forces.xml  forces_ankle_frame.xml  forces_contact_frame.xml  forces_extra_frame.xml  wheels_motor_velocity.xml
rviz/: disp.rviz
src/: Receding_horizon.py  constraints.py  costs.py  cubic_hermite_polynomial.py  demo_action_client.py  demo_action_server.py  feet_contacts.py  feet_contacts_window.py  footholds_optimization.py  gait.py  gait_base.py  gait_base_node.py  gait_node.py  gait_payload_node.py  gait_with_payload.py  gait_with_payload_backward_arms.py  gait_with_payload_nonlinear.py  gait_with_payload_nonlinear_test.py  get_link_global_pose.py  init_cartesio_node.py  node1.py  node2.py  online_simple_gait_node.py  online_simple_gait_replay_node.py  parameters.py  receding_hz_planner_node.py  receding_hz_replay_node.py  roll_node.py  spline_optimization.py  stairs_action_server.py  static_gait_with_payload.py  step.py  step_node.py  step_payload_node.py  step_with_payload.py  tf_listener.py  trj_interpolation.py  trot.py  trot_node.py  walking.py
tests/: casadi_tests.py  step_payload_tests.py  swing_leg_trj.py  tests.py
worlds/: centauro_brick.world  centauro_gap.world  (+8 more)
(+150 files in other folders)
